@@ -1,3 +1,9 @@
+2001-06-12  Dave Peticolas  <dave@krondo.com>
+
+	* src/engine/gnc-book.c (gnc_book_get_file_lock): some filesystems
+	don't support hard links. If the error code indicates this, go
+	ahead and grant the lock. Is there a better way?
+
 2001-06-11  Dave Peticolas  <dave@krondo.com>
 
 	* src/register/gnome/gnucash-date-picker.c
